<resources>
    <string name="app_name">Photostream App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_feed_fragment">FeedFragment</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search</string>
    <string name="searchHint">Enter Search Term</string>
    <string name="prevImage">Previous Image</string>
    <string name="nextImage">Next Image</string>
    <string name="save">Save</string>
    <string name="feedTitle">Your Feed</string>
    <string name="delete">Delete</string>
</resources>
